Edited all resumes and removed excessive keywords

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -14,7 +14,7 @@
 % --------- Contact Information -----------
 \introduction[
     fullname={Amogh Jagadish Tambad},
-    location = {San Francisco, CA},
+    location = {Tempe, AZ},
     email={tambadamogh@gmail.com},
     phone={(480) 876-5096},
     linkedin={linkedin.com/in/ajtambad},
@@ -94,7 +94,7 @@
         \vspace{-0.5em}
         \itemsep -6pt {}
 
-        \item Integrated \textbf{Terraform}, \textbf{Ansible}, with \textbf{Jenkins}, and \textbf{GitHub Actions} based CI/CD pipeline to provision AWS EC2 instances and deploy web services within \textbf{1 minute} of version control changes
+        \item Reduced deployment time by 90\%, integrating \textbf{Terraform} and \textbf{Ansible} into \textbf{Jenkins}/\textbf{GitHub Actions} CI/CD pipeline for AWS EC2 instance provisioning and web service deployment.
         \item Optimized CI/CD pipelines to dynamically retrieve instance IPs, configure secure SSH access, and deploy services,
         eliminating manual intervention and resolving \textbf{IAM} and resource issues in production-like environments
     \end{itemize}
@@ -126,22 +126,20 @@
 \begin{skillsSection}{Skills}
     \skillItem[
         category={Languages},
-        skills={Python, C++ Go, Java, JavaScript, Typescript, Scala, HTML, XML}
+        skills={Python, C++ Go, Java, JavaScript, Typescript, HTML, CSS, SQL (MySQL, PostgreSQL), NoSQL (MongoDB)}
     ] \\
     \skillItem[
         category={Cloud Technologies},
-        skills={AWS (EC2, Lambda, S3, ECS, CloudFormation, EKS, ECR, CloudWatch), TensorFlow, Docker, Kubernetes, Helm, Terraform, Jenkins, Github Actions, GCP}
+        skills={AWS (EC2, Lambda, S3, ECS, EKS, etc), Docker, Kubernetes, Helm, Terraform, GCP}
     ] \\
     \skillItem[
         category={Tools},
-        skills={Linux (RHEL, Ubuntu), Unix, Git (Version Control), Bash, Github, Ansible, Chef, Gitlab, Prometheus, Grafana, Postman}
+        skills={Linux, Unix, Git (Version Control), Bash, Github, Jenkins, Github Actions, Chef, Gitlab, Prometheus, Grafana, Datadog}
     ] \\
     \skillItem[
         category={Miscellaneous},
-        skills={Distributed Systems, RESTful APIs, Microservices, Object Oriented Programming, Agile, Test Driven Development (TDD), Infrastructure as code (IaC), DevOps, Cloud Infrastructure, Collaboration, Writing}
+        skills={Distributed Systems, Microservices, Object Oriented Programming, Data Structures, Agile, Infrastructure as code (IaC), DevOps, Cloud Infrastructure, TCP/IP, Troubleshooting, Containerization, Effective Communication}
     ]
 \end{skillsSection}
-
-
 
 \end{document}
