Fixed errors in SDE resume

--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -39,6 +39,8 @@
         coursework={Data Structure and Algorithms, Operating Systems, Cloud Computing, Computer Networks},
     ]
 
+
+\end{educationSection}
 % --------- Experience -----------
 
     \begin{experienceSection}{Professional Experience}
@@ -122,12 +124,11 @@
 
 \end{experienceSection}
 
-\end{educationSection}
 % --------- Skills -----------
 \begin{skillsSection}{Skills}
     \skillItem[
-        category={Languages & Database},
-        skills={Python, C++ Go, Java, JavaScript, Typescript, HTML, CSS, SQL(MySQL, Postgres), NoSQL (MongoDB)}
+        category={Languages \& Database},
+        skills={Python, C++, Go, Java, JavaScript, Typescript, HTML, CSS, SQL(MySQL, Postgres), NoSQL (MongoDB)}
     ] \\
     \skillItem[
         category={Tools},
