Changed location on SDE resume

--- a/SDE/SDE.tex
+++ b/SDE/SDE.tex
@@ -14,7 +14,7 @@
 % --------- Contact Information -----------
 \introduction[
     fullname={Amogh Jagadish Tambad},
-    location={San Francisco, CA},
+    location={Tempe, AZ},
     email={tambadamogh@gmail.com},
     phone={(480) 876-5096},
     linkedin={linkedin.com/in/ajtambad},
