Changed location to CA from AZ

--- a/DevOps/DevOps.tex
+++ b/DevOps/DevOps.tex
@@ -84,7 +84,7 @@
 \end{experienceSection}
 
 % --------- Projects -----------
-\begin{experienceSection}{Academic projects}
+\begin{experienceSection}{Academic Projects}
 
     \projectItem[
         title={End-to-end Deployment Automation},
